--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/*CSS reset inicio*/
+/*CSS reset starts*/
 html {
   box-sizing: border-box;
   font-size: 16px;
@@ -39,13 +39,14 @@ img {
   height: auto;
 }
 
-/*CSS reset fim*/
+/*CSS reset end*/
 
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   background-color: #084167;
 }
 
+/* Header and NavBar*/
 header {
   height: 10vh;
   width: 100vw;
@@ -69,6 +70,7 @@ nav {
   margin: 1vh 1vh;
 }
 
+/*Content*/
 .content {
   display: flex;
   width: 100vw;
@@ -83,8 +85,20 @@ nav {
   cursor: pointer;
 }
 
-.photo>span {
+#image {
+  transition-duration: 1s;
+}
+
+#photo {
+  display: flex;
+  flex-direction: column;
+}
+
+#photo>span {
   color: #fff;
+  font-size: 1.5em;
+  font-weight: 500;
+  padding: 0.5em;
   margin: 0 auto;
   text-align: center;
 }
