--- a/participantes/marcos/marcos.css
+++ b/participantes/marcos/marcos.css
@@ -100,6 +100,58 @@ nav {
     grid-row: 1 / 3;    
     grid-column-start: 2;
     background-color: #dbf227;
+    color: black;
+}
+
+.bar{
+    position: relative;
+    background-color: black;    
+    width: 80%;
+    height: 1px;
+    border-radius: 10px;
+}
+
+
+.marker{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: black;
+    border-radius: 20px;
+    height: 12px;
+    width: 26px;
+}
+
+.barOne{
+    top: 5vh;
+}
+
+.barTwo {
+    top: 15vh;
+}
+.barThree {
+    top: 25vh;
+}
+.barFour {
+    top: 35vh;
+}
+.barFive {
+    top: 45vh;
+}
+.barSix {
+    top: 55vh;
+}
+.barSeven {
+    top: 65vh;
+}
+
+.tittleBar {
+    color: black;
+}
+
+.featuresRight {
+   margin-left: 28vw;
 }
 
 .curiosities {
