--- a/participantes/marcos/marcos.css
+++ b/participantes/marcos/marcos.css
@@ -85,7 +85,7 @@ nav {
 
 .item1 {
     display: flex;
-    justify-content: start;
+    text-align: left;
 }
 
 .tittle {
@@ -103,12 +103,14 @@ nav {
     color: black;
 }
 
+
 .bar{
     position: relative;
     background-color: black;    
     width: 80%;
     height: 1px;
     border-radius: 10px;
+    margin-top: 9vh;
 }
 
 
@@ -121,29 +123,6 @@ nav {
     border-radius: 20px;
     height: 12px;
     width: 26px;
-}
-
-.barOne{
-    top: 5vh;
-}
-
-.barTwo {
-    top: 15vh;
-}
-.barThree {
-    top: 25vh;
-}
-.barFour {
-    top: 35vh;
-}
-.barFive {
-    top: 45vh;
-}
-.barSix {
-    top: 55vh;
-}
-.barSeven {
-    top: 65vh;
 }
 
 .tittleBar {
@@ -168,6 +147,17 @@ nav {
     margin-left: 5vw;
     border: solid 2vh #dbf227;
     border-radius: 2vh;
+}
+
+@media (max-width: 80vw){
+    /* display: grid;       
+    padding: 1vh;
+    grid-template-columns: 1.5fr 2fr;
+    grid-template-rows: 30vh 50vh;
+    gap: 1vh;
+    color: white; */
+
+    display: grid;
 }
 
 
