--- a/about.css
+++ b/about.css
@@ -75,6 +75,10 @@ nav {
     padding: 0.8em;
 }
 
+.post>h3 {
+    margin-bottom: 1em;
+}
+
 .s1 {
     background-color: #ffafa3;
 }
@@ -97,4 +101,14 @@ nav {
 
 .s6 {
     background-color: #ffd966;
+}
+
+@media screen and (max-width:750px) {
+    .content {
+        display: grid;
+    }
+
+    .card {
+        width: 70vw;
+    }
 }
