about ruan added

--- a/about.css
+++ b/about.css
@@ -43,8 +43,6 @@ nav {
     margin: 1vh 1vh;
 }
 
-
-
 .content {
     display: flex;
     justify-content: center;
@@ -77,6 +75,7 @@ nav {
 
 .post>h3 {
     margin-bottom: 1em;
+    font-size: 1em;
 }
 
 .s1 {
