--- a/participantes/marcos/marcos.css
+++ b/participantes/marcos/marcos.css
@@ -43,11 +43,13 @@ img {
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #084167;
+    min-height: 320px;
+    max-width: 100%;
 }
 
 header {
     height: 10vh;
-    width: 100vw;
+    width: 98vw;
     padding: 0.5em 1.5em 0.5em 1.5em;
     background-color: #042940;
     display: flex;
@@ -112,7 +114,7 @@ nav {
     width: 80%;
     height: 1px;
     border-radius: 10px;
-    margin-top: 9vh;
+    margin-top: 8%;
 }
 
 
@@ -139,28 +141,67 @@ nav {
     margin-top: 5vh;
 }
 
-.buttons {
-    margin-top: 10vh;
-    color: black;
-}
-
 .button{
     background-color: #dbf227;
-    margin-left: 5vw;
     border: solid 2vh #dbf227;
     border-radius: 2vh;
     color: black;
 }
 
-@media (max-width: 80vw){
-    /* display: grid;       
-    padding: 1vh;
-    grid-template-columns: 1.5fr 2fr;
-    grid-template-rows: 30vh 50vh;
-    gap: 1vh;
-    color: white; */
-
-    
+.buttons{
+    margin-top: 8vh;
 }
+@media (max-width: 1360px ) and (min-width: 1010px){
+    .item2 {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 100%;
+    }
+
+    .bar{            
+        width: 100%;       
+        margin-top: 10%;
+    }
+}
+
+@media (max-width: 1010px) {
+    .grid-container {
+      display: flex;
+      flex-direction: column;
+    }
+
+    .bar{            
+        width: 100%;   
+        margin-top: 10%;
+    }
+
+    .item1 {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .grid-item {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .item2 {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 100%;
+    }
+
+    .bar{
+        position: relative;
+        background-color: black;    
+        width: 100%;
+        height: 1px;
+        border-radius: 10px;
+        margin-top: 10%;
+    }
+}
+
 
 
